yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: travel-service
  namespace: travel-ns
spec:
  type: ClusterIP
  selector:
    app: travel-app
  ports:
    - port: 5050
      targetPort: 80
